# heart_disease_prediction

./: .gitignore  README.md  heart_disease_pipeline.ipynb  instruction.md  pyproject.toml
inputs/: heart_disease_uci.csv
src/: data_cleaning.py  feature_engineering.py  imputer.py  main.py  model_trainer.py  tuner.py
