[project]
name = "heart-disease-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "kaungmyatwaiyan",email = "kaungmyatwaiyan.4869@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "optuna (>=4.0.0,<5.0.0)",
    "pandas (<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.5,<3.10)",
    "seaborn (>=0.13.2,<0.14.0)",
    "setuptools (<70.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
